--- a/pur_beurre/index.html
+++ b/pur_beurre/index.html
@@ -39,12 +39,21 @@
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-10 align-self-end">
-                        <h1 class="text-uppercase text-white font-weight-bold">Your Favorite Source of Free Bootstrap Themes</h1>
+                        <h1 class="text-uppercase text-white font-weight-bold">Du Gras, oui mais de qualité</h1>
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+                        <p class="text-white-75 font-weight-light mb-5">Trouvez un produit de substitution pour ceux que vous consommez tous les jours!</p>
+                        <form action="index.html" method="post" novalidate>
+                            <div class="form-group">
+                                <div class="border border-secondary mt-4 rounded">
+                                    <input type="text" id="question" class="my-question form-control" value="Ton produit ici..." required>
+                                </div>
+                                <div class="text-right">
+                                    <button type="button" id="ask_button" class="btn btn-primary mt-2">Trouver substituts</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
