--- a/pur_beurre/index.html
+++ b/pur_beurre/index.html
@@ -44,10 +44,13 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 font-weight-light mb-5">Trouvez un produit de substitution pour ceux que vous consommez tous les jours!</p>
+                    </div>
+                    <!-- next div not good. need to solve-->
+                    <div class="col-5 align-content-center">
                         <form action="index.html" method="post" novalidate>
                             <div class="form-group">
                                 <div class="border border-secondary mt-4 rounded">
-                                    <input type="text" id="question" class="my-question form-control" value="Ton produit ici..." required>
+                                    <input type="text" id="question" class="form-control" value="Ton produit ici..." required>
                                 </div>
                                 <div class="text-right">
                                     <button type="button" id="ask_button" class="btn btn-primary mt-2">Trouver substituts</button>
@@ -55,6 +58,8 @@
                             </div>
                         </form>
                     </div>
+
+
                 </div>
             </div>
         </header>
