working on index

--- a/pur_beurre/index.html
+++ b/pur_beurre/index.html
@@ -41,12 +41,11 @@
                     <div class="col-lg-10 align-self-end">
                         <h1 class="text-uppercase text-white font-weight-bold">Du Gras, oui mais de qualité</h1>
                         <hr class="divider my-4" />
+                    </div> 
+                    <div class="col-lg-8 align-self-center mb-2">
+                        <h2 class="text-white-75 font-weight-light">Trouvez un produit de substitution pour ceux que vous consommez tous les jours!</h2>
                     </div>
-                    <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">Trouvez un produit de substitution pour ceux que vous consommez tous les jours!</p>
-                    </div>
-                    <!-- next div not good. need to solve-->
-                    <div class="col-5 align-content-center">
+                    <div class="col-10 col-md-8 col-lg-5  align-self-start">
                         <form action="index.html" method="post" novalidate>
                             <div class="form-group">
                                 <div class="border border-secondary mt-4 rounded">
@@ -58,8 +57,6 @@
                             </div>
                         </form>
                     </div>
-
-
                 </div>
             </div>
         </header>
