--- a/pur_beurre/index.html
+++ b/pur_beurre/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Creative - Start Bootstrap Theme</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/logo_pur_beurre-favicon.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -22,11 +22,12 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container">
+                <img src="assets/img/logo_pur_beurre.png" width="40" height="30" alt="Pur beurre logo">
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">Pur Beurre</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Recherche</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#search">Recherche</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Mon compte</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Mes aliments</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Déconnexion</a></li>
@@ -35,7 +36,7 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead">
+        <header class="masthead" id="search">
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-10 align-self-end">
@@ -49,10 +50,10 @@
                         <form action="index.html" method="post" novalidate>
                             <div class="form-group">
                                 <div class="border border-secondary mt-4 rounded">
-                                    <input type="text" id="question" class="form-control" value="Ton produit ici..." required>
+                                    <input type="text" id="question" class="form-control" value="Produit" required>
                                 </div>
                                 <div class="text-right">
-                                    <button type="button" id="ask_button" class="btn btn-primary mt-2">Trouver substituts</button>
+                                    <button type="button" id="ask_button" class="btn btn-primary mt-2">Chercher</button>
                                 </div>
                             </div>
                         </form>
