--- a/pur_beurre/index.html
+++ b/pur_beurre/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Creative - Start Bootstrap Theme</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/img/logo_pur_beurre-favicon.png" />
+        <link rel="icon" type="image/x-icon" href="assets/img/logo_pur_beurre-favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container">
                 <img src="assets/img/logo_pur_beurre.png" width="40" height="30" alt="Pur beurre logo">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">Pur Beurre</a>
+                <a class="navbar-brand js-scroll-trigger pl-2" href="#page-top">Pur Beurre</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
