working on index's navbar

--- a/pur_beurre/index.html
+++ b/pur_beurre/index.html
@@ -29,7 +29,7 @@
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#search">Recherche</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Mon compte</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Mes aliments</a></li>
+                        <li class="nav-item"><a href="#portfolio"><img src="assets/img/noun_Carrot_29691_copy.png" class="nav-link js-scroll-trigger" width="80"></a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Déconnexion</a></li>
                     </ul>
                 </div>
