--- a/pur_beurre/index.html
+++ b/pur_beurre/index.html
@@ -26,10 +26,10 @@
                 <a class="navbar-brand js-scroll-trigger pl-2" href="#page-top">Pur Beurre</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto my-2 my-lg-0">
+                    <ul class="navbar-nav ml-auto my-2 my-lg-0 align-items-center">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#search">Recherche</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Mon compte</a></li>
-                        <li class="nav-item"><a href="#portfolio"><img src="assets/img/noun_Carrot_29691_copy.png" class="nav-link js-scroll-trigger" width="80"></a></li>
+                        <li class="nav-item"><a href="#portfolio"><img src="assets/img/noun_Carrot_29691_copy.png" class="nav-link js-scroll-trigger" width="70"></a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Déconnexion</a></li>
                     </ul>
                 </div>
