working on index's navbar. close to good

--- a/pur_beurre/index.html
+++ b/pur_beurre/index.html
@@ -28,13 +28,13 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0 align-items-center">
-                        <form class="d-flex" action="index.html" method="post" novalidate>
+                        <form class="d-flex pl-4 pr-4" action="index.html" method="post" novalidate>
                             <input type="text" id="question" class="form-control mybox" value="Chercher"
                                 aria-label="Search" required>
                         </form>
-                        <li class="nav-item"><a href="#services"><img class="nav-link js-scroll-trigger" src="assets/img/user.png" width="60" alt="user logo"></a></li>
-                        <li class="nav-item"><a href="#portfolio"><img class="nav-link js-scroll-trigger" src="assets/img/carrot.png" width="70" alt="carrot logo"></a></li>
-                        <li class="nav-item"><a href="#contact"><img class="nav-link js-scroll-trigger" src="assets/img/exit.png" width="40" alt="exit logo"></a></li>
+                        <li class="nav-item"><a href="#services"><img class="nav-link js-scroll-trigger" src="assets/img/user.png" width="70" alt="user logo"></a></li>
+                        <li class="nav-item"><a href="#portfolio"><img class="nav-link js-scroll-trigger" src="assets/img/carrot.png" width="80" alt="carrot logo"></a></li>
+                        <li class="nav-item"><a href="#contact"><img class="nav-link js-scroll-trigger" src="assets/img/exit.png" width="50" alt="exit logo"></a></li>
                     </ul>
                 </div>
             </div>
