working on index page

--- a/pur_beurre/index.html
+++ b/pur_beurre/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Creative - Start Bootstrap Theme</title>
+        <title>P8 - Pur-beurre</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/logo_pur_beurre-favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -72,11 +72,21 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">We've got what you need!</h2>
+                        <h2 class="text-white mt-0">Colette et Rémy</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-                        <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+                        <p class="text-white-50 mb-4">Pur Beurre est l'initiative de deux amoureux de la gastronomie française, Colette Tatou et Rémy, que vous avez déjà
+                        certainement rencontrés dans notre excellent restaurant Ratatouille</p>
+                            <div class="row">
+                                <div class="col-3">
+                                    <p class="text-white-50 mb-4">Collette</p>
+                                </div>
+                                <div class="col-3">
+                                    <p class="text-white-50 mb-4">Rémy</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+
                 </div>
             </div>
         </section>
