index remy and collete section done

--- a/pur_beurre/index.html
+++ b/pur_beurre/index.html
@@ -77,11 +77,11 @@
                         <p class="text-white-50 mb-4">Pur Beurre est l'initiative de deux amoureux de la gastronomie française, Colette Tatou et Rémy, que vous avez déjà
                         certainement rencontrés dans notre excellent restaurant Ratatouille</p>
                             <div class="row">
-                                <div class="col-3">
-                                    <p class="text-white-50 mb-4">Collette</p>
+                                <div class="col-sm-6 align-self-center">
+                                        <img src="assets/img/colette.png" alt="colette">
                                 </div>
-                                <div class="col-3">
-                                    <p class="text-white-50 mb-4">Rémy</p>
+                                <div class="col-sm-6 align-self-center">
+                                    <img src="assets/img/remy.png" alt="remy">
                                 </div>
                             </div>
                         </div>
