continuing on index

--- a/pur_beurre/index.html
+++ b/pur_beurre/index.html
@@ -90,6 +90,31 @@
                 </div>
             </div>
         </section>
+
+        <!-- Contact-->
+        <section class="page-section bg-white" id="about">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="text-dark mt-0">Contactez-nous!</h2>
+                        <hr class="divider light my-4" />
+                        <p class="text-dark-50 mb-4">N'hésitez pas à nous contacter par téléphone ou email!</p>
+                        <div class="row">
+                            <div class="col-sm-6 align-self-center">
+                                <img src="assets/img/telephone.png" class= "mt-4" alt="logo telephone">
+                                <p class="text-dark-50 text-center mt-2">00.00.00.00.00</p>
+                            </div>
+                            <div class="col-sm-6 align-self-center">
+                                <img src="assets/img/email.png" class= "mt-4" alt="logo email">
+                                <p class="text-dark-50 mt-2">mail@mail.com</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        
+            </div>
+            </div>
+        </section>
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container">
