--- a/pur_beurre/results.html
+++ b/pur_beurre/results.html
@@ -42,27 +42,9 @@
         <!-- Masthead-->
         <header class="masthead" id="search">
             <div class="container h-100">
-                <div class="row h-100 align-items-center justify-content-center text-center">
-                    <div class="col-lg-10 align-self-end">
-                        <h1 class="text-uppercase text-white font-weight-bold">Du Gras, oui mais de qualité</h1>
-                        <hr class="divider my-4" />
-                    </div> 
+                <div class="row h-100 align-items-center justify-content-center text-center"> 
                     <div class="col-lg-8 align-self-center mb-2">
-                        <h2 class="text-white-75 font-weight-light">Trouvez un produit de substitution pour ceux que vous consommez tous les jours!</h2>
-                    </div>
-                    <div class="col-10 col-md-8 col-lg-5  align-self-start">
-                        <form action="index.html" method="post" novalidate>
-                            <div class="form-group align-content-end">
-                                <div class="row">
-                                    <div class="col-8">
-                                        <input type="text" id="question" class="form-control" value="Produit" required>
-                                    </div>
-                                    <div class="col-4">
-                                        <button type="button" id="ask_button" class="btn btn-primary">Chercher</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
+                        <p class="text-white-50 mb-4">Aliment cherché</p>
                     </div>
                 </div>
             </div>
