--- a/pur_beurre/index.html
+++ b/pur_beurre/index.html
@@ -32,9 +32,21 @@
                             <input type="text" id="question" class="form-control mybox" value="Chercher"
                                 aria-label="Search" required>
                         </form>
-                        <li class="nav-item"><a href="#services"><img class="nav-link js-scroll-trigger" src="assets/img/user.png" width="35" alt="user logo"></a></li>
-                        <li class="nav-item"><a href="#portfolio"><img class="nav-link js-scroll-trigger" src="assets/img/carrot.png" width="50" alt="carrot logo"></a></li>
-                        <li class="nav-item"><a href="#contact"><img class="nav-link js-scroll-trigger" src="assets/img/exit.png" width="30" alt="exit logo"></a></li>
+                        <li class="nav-item nav-link js-scroll-trigger">
+                            <a href="#services">
+                                <i class="far fa-user"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item nav-link js-scroll-trigger">
+                            <a href="#portfolio">
+                                <i class="fas fa-carrot" data-fa-transform="rotate-315"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item nav-link js-scroll-trigger">
+                            <a href="#contact">
+                                <i class="fas fa-sign-out-alt"></i>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
