git changed other icons with fontawesome

--- a/pur_beurre/index.html
+++ b/pur_beurre/index.html
@@ -113,11 +113,11 @@
                         <p class="text-dark-50 mb-4">N'hésitez pas à nous contacter par téléphone ou email!</p>
                         <div class="row">
                             <div class="col-sm-6 align-self-center text-secondary">
-                                <img src="assets/img/telephone.png" class="mt-4" width="70" alt="logo telephone">
+                                <i class="fas fa-phone fa-rotate-90"></i>
                                 <p class="text-dark-50 text-center mt-2">00.00.00.00.00</p>
                             </div>
                             <div class="col-sm-6 align-self-center text-secondary">
-                                <img src="assets/img/email.png" class= "mt-4" width="70" alt="logo email">
+                                <i class="far fa-envelope"></i>
                                 <p class="text-dark-50 mt-2">mail@mail.com</p>
                             </div>
                         </div>
