--- a/pur_beurre/results.html
+++ b/pur_beurre/results.html
@@ -25,109 +25,117 @@
             <div class="container">
                 <img src="assets/img/logo_pur_beurre.png" width="40" height="30" alt="Pur beurre logo">
                 <a class="navbar-brand js-scroll-trigger pl-2" href="#page-top">Pur Beurre</a>
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                    data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                    aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0 align-items-center">
                         <form class="d-flex pl-4 pr-4" action="index.html" method="post" novalidate>
-                            <input type="text" id="question" class="form-control mybox" value="Chercher"
-                                aria-label="Search" required>
+                            <input type="text" id="question" class="form-control mybox" value="Chercher" aria-label="Search"
+                                required>
                         </form>
-                        <li class="nav-item"><a href="#services"><img class="nav-link js-scroll-trigger" src="assets/img/user.png" width="70" alt="user logo"></a></li>
-                        <li class="nav-item"><a href="#portfolio"><img class="nav-link js-scroll-trigger" src="assets/img/carrot.png" width="80" alt="carrot logo"></a></li>
-                        <li class="nav-item"><a href="#contact"><img class="nav-link js-scroll-trigger" src="assets/img/exit.png" width="50" alt="exit logo"></a></li>
+                        <li class="nav-item nav-link js-scroll-trigger">
+                            <a href="#services">
+                                <i class="far fa-user"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item nav-link js-scroll-trigger">
+                            <a href="#portfolio">
+                                <i class="fas fa-carrot" data-fa-transform="rotate-315"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item nav-link js-scroll-trigger">
+                            <a href="#contact">
+                                <i class="fas fa-sign-out-alt"></i>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead" id="search">
+        <header class="searchhead" id="searched">
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center"> 
                     <div class="col-lg-8 align-self-center mb-2">
-                        <p class="text-white-50 mb-4">Aliment cherché</p>
+                        <p class="text-white-50 mb-4">[ Aliment cherché ]</p>
                     </div>
                 </div>
             </div>
         </header>
-        <!-- About-->
-        <section class="page-section bg-primary" id="about">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Colette et Rémy</h2>
-                        <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">Pur Beurre est l'initiative de deux amoureux de la gastronomie française, Colette Tatou et Rémy, que vous avez déjà
-                        certainement rencontrés dans notre excellent restaurant Ratatouille</p>
-                            <div class="row">
-                                <div class="col-sm-6 align-self-center">
-                                        <img src="assets/img/colette.png" alt="colette">
-                                </div>
-                                <div class="col-sm-6 align-self-center">
-                                    <img src="assets/img/remy.png" alt="remy">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </section>
-
-        <!-- Contact-->
-        <section class="page-section bg-white" id="about">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8 text-center">
-                        <h2 class="text-dark mt-0">Contactez-nous!</h2>
-                        <hr class="divider light my-4" />
-                        <p class="text-dark-50 mb-4">N'hésitez pas à nous contacter par téléphone ou email!</p>
-                        <div class="row">
-                            <div class="col-sm-6 align-self-center">
-                                <img src="assets/img/telephone.png" class= "mt-4" alt="logo telephone">
-                                <p class="text-dark-50 text-center mt-2">00.00.00.00.00</p>
-                            </div>
-                            <div class="col-sm-6 align-self-center">
-                                <img src="assets/img/email.png" class= "mt-4" alt="logo email">
-                                <p class="text-dark-50 mt-2">mail@mail.com</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            </div>
-        </section>
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container">
-                <h2 class="text-center mt-0">At Your Service</h2>
+                <h2 class="text-center mt-0">Résultats</h2>
                 <hr class="divider my-4" />
                 <div class="row">
-                    <div class="col-lg-3 col-md-6 text-center">
+                    <div class="col-lg-4 col-sm-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Sturdy Themes</h3>
                             <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 text-center">
+                    <div class="col-lg-4 col-sm-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Up to Date</h3>
                             <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 text-center">
+                    <div class="col-lg-4 col-sm-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-globe text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Ready to Publish</h3>
                             <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 text-center">
+                    <div class="col-lg-4 col-sm-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Made with Love</h3>
-                            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+                            <a href="">
+                                <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
+                                <p class="h4 mb-1"> Nom aliment 4</p>
+                            </a>
+                            <a href="">
+                                <p class="text-muted mb-0" href=>
+                                    <span>
+                                        <i class="fas fa-save"></i>
+                                    </span>
+                                    Sauvegarder
+                                </p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 text-center">
+                        <div class="mt-5">
+                            <a href="">
+                                <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
+                                <p class="h4 mb-1"> Nom aliment 5</p>
+                            </a>
+                            <a href="">
+                                <p class="text-muted mb-0" href=>
+                                    <span>
+                                        <i class="fas fa-save"></i>
+                                    </span>
+                                    Sauvegarder
+                                </p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 text-center">
+                        <div class="mt-5">
+                            <a  href="">
+                                <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
+                                <p class="h4 mb-1"> Nom aliment 6</p>
+                            </a>
+                            <a href="">
+                                <p class="text-muted mb-0" href=>
+                                    <span>
+                                        <i class="fas fa-save"></i>
+                                    </span>
+                                    Sauvegarder
+                                </p>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -136,7 +144,7 @@
         <!-- Portfolio-->
         <div id="portfolio">
             <div class="container-fluid p-0">
-                <div class="row no-gutters">
+                <div class="row">
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
