--- a/pur_beurre/results.html
+++ b/pur_beurre/results.html
@@ -76,7 +76,7 @@
                                 <p class="h4 m-1"> aliment 1</p>
                             </a>
                             <div class="nutriscore-circle">
-                                <i class="far fa-circle"></i>
+                                <i class="fas fa-circle"></i>
                             </div>
                             <div class="nutriscore-letter">
                                 <p>A</p>
@@ -99,7 +99,7 @@
                                 <p class="h4 m-1"> aliment 2</p>
                             </a>
                             <div class="nutriscore-circle">
-                                <i class="far fa-circle"></i>
+                                <i class="fas fa-circle"></i>
                             </div>
                             <div class="nutriscore-letter">
                                 <p>A</p>
@@ -122,7 +122,7 @@
                                 <p class="h4 m-1"> aliment 3</p>
                             </a>
                             <div class="nutriscore-circle">
-                                <i class="far fa-circle"></i>
+                                <i class="fas fa-circle"></i>
                             </div>
                             <div class="nutriscore-letter">
                                 <p>A</p>
@@ -145,7 +145,7 @@
                                 <p class="h4 m-1"> aliment 4</p>
                             </a>
                             <div class="nutriscore-circle">
-                                <i class="far fa-circle"></i>
+                                <i class="fas fa-circle"></i>
                             </div>
                             <div class="nutriscore-letter">
                                 <p>A</p>
@@ -168,7 +168,7 @@
                                 <p class="h4 m-1"> aliment 5</p>
                             </a>
                             <div class="nutriscore-circle">
-                                <i class="far fa-circle"></i>
+                                <i class="fas fa-circle"></i>
                             </div>
                             <div class="nutriscore-letter">
                                 <p>A</p>
@@ -191,7 +191,7 @@
                                 <p class="h4 m-1"> aliment 6</p>
                             </a>
                             <div class="nutriscore-circle">
-                                <i class="far fa-circle"></i>
+                                <i class="fas fa-circle"></i>
                             </div>
                             <div class="nutriscore-letter">
                                 <p>A</p>
