--- a/pur_beurre/index.html
+++ b/pur_beurre/index.html
@@ -32,17 +32,17 @@
                             <input type="text" id="question" class="form-control mybox" value="Chercher"
                                 aria-label="Search" required>
                         </form>
-                        <li class="nav-item nav-link js-scroll-trigger">
+                        <li class="nav-item nav-link js-scroll-trigger navbar-brand">
                             <a href="#services">
                                 <i class="far fa-user"></i>
                             </a>
                         </li>
-                        <li class="nav-item nav-link js-scroll-trigger">
+                        <li class="nav-item nav-link js-scroll-trigger navbar-brand">
                             <a href="#portfolio">
                                 <i class="fas fa-carrot" data-fa-transform="rotate-315"></i>
                             </a>
                         </li>
-                        <li class="nav-item nav-link js-scroll-trigger">
+                        <li class="nav-item nav-link js-scroll-trigger navbar-brand">
                             <a href="#contact">
                                 <i class="fas fa-sign-out-alt"></i>
                             </a>
