style change to fit chart

--- a/pur_beurre/index.html
+++ b/pur_beurre/index.html
@@ -34,7 +34,7 @@
                         </form>
                         <li class="nav-item nav-link js-scroll-trigger navbar-brand">
                             <a href="#services">
-                                <i class="far fa-user"></i>
+                                <i class="fas fa-user"></i>
                             </a>
                         </li>
                         <li class="nav-item nav-link js-scroll-trigger navbar-brand">
@@ -86,7 +86,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Colette et Rémy</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">Pur Beurre est l'initiative de deux amoureux de la gastronomie française, Colette Tatou et Rémy, que vous avez déjà
+                        <p class="text-white-75 mb-4">Pur Beurre est l'initiative de deux amoureux de la gastronomie française, Colette Tatou et Rémy, que vous avez déjà
                         certainement rencontrés dans notre excellent restaurant Ratatouille</p>
                             <div class="row">
                                 <div class="col-sm-6 align-self-center">
@@ -110,15 +110,15 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-dark mt-0">Contactez-nous!</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-dark-50 mb-4">N'hésitez pas à nous contacter par téléphone ou email!</p>
+                        <p class="text-dark-75 mb-4">N'hésitez pas à nous contacter par téléphone ou email!</p>
                         <div class="row">
                             <div class="col-sm-6 align-self-center text-secondary">
                                 <i class="fas fa-phone fa-rotate-90"></i>
-                                <p class="text-dark-50 text-center mt-2">00.00.00.00.00</p>
+                                <p class="text-dark-75 text-center mt-2">00.00.00.00.00</p>
                             </div>
                             <div class="col-sm-6 align-self-center text-secondary">
                                 <i class="far fa-envelope"></i>
-                                <p class="text-dark-50 mt-2">mail@mail.com</p>
+                                <p class="text-dark-75 mt-2">mail@mail.com</p>
                             </div>
                         </div>
                     </div>
@@ -131,8 +131,8 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
                         <div class="row">
-                            <div class="col-sm-6 align-self-center small text-muted"><a href="#mention_legales">Mention légales</a></div>
-                            <div class="col-sm-6 align-self-center small text-muted"><a href="#contact">Contact</a></div>
+                            <div class="col-sm-6 align-self-center text-muted"><a href="#mention_legales" class="footer-text">Mention légales</a></div>
+                            <div class="col-sm-6 align-self-center text-muted"><a href="#contact" class="footer-text">Contact</a></div>
                         </div>
                     </div>
                 </div>
