--- a/pur_beurre/index.html
+++ b/pur_beurre/index.html
@@ -34,7 +34,7 @@
                         </form>
                         <li class="nav-item nav-link js-scroll-trigger navbar-brand">
                             <a href="#services">
-                                <i class="fas fa-user"></i>
+                                <i class="fas fa-user" id="user_icon"></i>
                             </a>
                         </li>
                         <li class="nav-item nav-link js-scroll-trigger navbar-brand">
