css and static index all done. Starting django after this commit

--- a/pur_beurre/index.html
+++ b/pur_beurre/index.html
@@ -86,7 +86,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Colette et Rémy</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-75 mb-4">Pur Beurre est l'initiative de deux amoureux de la gastronomie française, Colette Tatou et Rémy, que vous avez déjà
+                        <p class="text-white mb-4">Pur Beurre est l'initiative de deux amoureux de la gastronomie française, Colette Tatou et Rémy, que vous avez déjà
                         certainement rencontrés dans notre excellent restaurant Ratatouille</p>
                             <div class="row">
                                 <div class="col-sm-6 align-self-center">
