--- a/pur_beurre/login.html
+++ b/pur_beurre/login.html
@@ -56,7 +56,7 @@
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-center mb-2">
-                        <h2 class="text-white-75 mb-4"> Créer compte </h2>
+                        <h2 class="text-white-75 mb-4">Se connecter</h2>
                     </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
         <section class="page-section bg-white" id="services">
             <div class="container">
                 <div class="row justify-content-center">
-                        <form action="create_account.html" method="post" novalidate>
+                    <form action="login.html" method="post" novalidate>
                         <div class="form-group align-content-center">
                             <div class="row justify-content-center">
                                 <div class="col-8 pl-2">
@@ -73,15 +73,15 @@
                                     <input type="email" id="email" class="form-control" value="email@email.com" required>
                                 </div>
                                 <div class="col-8 pl-2 pt-4">
-                                    <label for="pwd" class="text-dark">Mot de passe</label>
+                                    <label for="pwd" class="text-dark" >Mot de passe</label>
                                     <input type="password" id="password" class="form-control text-dark" value="********" required>
                                 </div>
                                 <div class="col-8 pl-2 pt-4">
-                                    <button type="submit" id="create_account_button" class="text-right btn btn-primary">Créer compte</button>
+                                    <button type="submit" id="create_account_button" class="text-right btn btn-primary">Se connecter</button>
                                 </div>
                             </div>
                         </div>
-                        </form>
+                    </form>
                 </div>
             </div>
         </section>
