--- a/pur_beurre/results.html
+++ b/pur_beurre/results.html
@@ -66,7 +66,7 @@
         <!-- Services-->
         <section class="page-section bg-white" id="services">
             <div class="container">
-                <p class="text-dark text-center text-secondary-50 mb-4"> Vous pouvez remplacer cet aliment par:  </p>
+                <h4 class="text-dark text-center text-secondary-50 mb-4"> Vous pouvez remplacer cet aliment par:  </h4>
                 <hr class="divider my-4" />
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 text-center">
